# fast-containers

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  btree-benchmarks.md  clang-tidy-report.md  clang_8_256_output.txt  clang_8_32_output.txt  install-hooks.sh  library.h  run_all_tests.sh  setup-dev.sh  testing_clang_8_32_output.txt
.github/workflows/: ci.yml
docs/: CLANG_TIDY_SETUP.md  btree_benchmark_results.md  orderbook_benchmark_results.md  pooled_values_performance_summary.md
docs/raw_data/btree_benchmark_results/: clang_8_256_output_large.txt  clang_8_32_output_small.txt
hooks/: pre-commit
include/fast_containers/: btree.hpp  btree.ipp  dense_map.hpp  dense_map.ipp  dense_map_simd.ipp  hugepage_allocator.hpp  hugepage_pool.hpp  multi_size_hugepage_allocator.hpp  multi_size_hugepage_pool.hpp  ordered_array.hpp  ordered_array.ipp  ordered_array_simd.ipp  policy_based_hugepage_allocator.hpp
results/: btree_benchmark_results.md
results/raw_data/btree_benchmark_results/: clang_8_256_output_small.txt  clang_8_32_output_large.txt  run.sh
scripts/: interleaved_btree_benchmark.py
src/: CMakeLists.txt  benchmark_encoding.hpp  btree.hpp  btree.ipp  hugepage_allocator.hpp  hugepage_pool.hpp  lyra_example.cpp  ordered_array.hpp  ordered_array.ipp  ordered_array_simd.ipp  policy_based_hugepage_allocator.hpp  simd_encoding.hpp
src/benchmarks/: CMakeLists.txt  byte_array_simd_benchmark.cpp  dense_map_search_benchmark.cpp  hugepage_allocator_benchmark.cpp  ordered_array_search_benchmark.cpp  sample_benchmark.cpp
src/binary/: CMakeLists.txt  btree_benchmark.cpp  btree_insert_stress.cpp  btree_stress.cpp  orderbook_sim.cpp  spin.cpp
src/tests/: sample_test.cpp  test_btree.cpp  test_hugepage_allocator.cpp  test_ordered_array.cpp  test_policy_based_allocator.cpp  test_simd_encoding.cpp
tests/: CMakeLists.txt  sample_test.cpp  test_btree.cpp  test_dense_map.cpp  test_hugepage_allocator.cpp  test_multi_size_allocator.cpp  test_ordered_array.cpp  test_policy_based_allocator.cpp
